[project]
name = "2dgrasstile"
version = "0.1.0"
description = "Generate Grass Tile from Procedure"
authors = [
    {name = "NavonilDas",email = "navneeladas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "noise (>=1.2.2,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
